--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ body {
   transition: var(--timing);
 }
 
-.wrapper-navbar .navlink li a:not(.dropdown-list li a):hover {
+.wrapper-navbar .navlink li a:hover {
   opacity: 0.7;
 }
 
@@ -184,10 +184,6 @@ body {
   transition: var(--timing);
 }
 
-.wrapper-navbar .dropdown-list li a:hover {
-  color: var(--warning-color);
-}
-
 .wrapper-navbar .navlink .dropdown:hover .dropdown-list {
   display: block;
 }
@@ -195,6 +191,10 @@ body {
 .wrapper-navbar .toggle-menu {
   display: none;
   font-size: 1.25rem;
+}
+
+.wrapper-navbar .side-navlink {
+  display: none;
 }
 
 /* jumbotron */
@@ -294,6 +294,7 @@ footer {
   line-height: 1.65;
   display: flex;
   justify-content: space-between;
+  align-items: baseline;
 }
 
 footer .credit a h2 {
@@ -360,6 +361,10 @@ footer .social-media i {
   }
 
   .wrapper-navbar .navlink {
+    display: none;
+  }
+
+  .wrapper-navbar .side-navlink {
     width: 100%;
     flex-direction: column;
     position: absolute;
@@ -367,6 +372,7 @@ footer .social-media i {
     left: -100%;
     z-index: -1;
     opacity: 0;
+    display: block;
     background: var(--gradient-color);
     transition: var(--timing);
   }
@@ -376,12 +382,12 @@ footer .social-media i {
     opacity: 1;
   }
 
-  .wrapper-navbar .navlink .dropdown-list {
+  .wrapper-navbar .side-navlink .dropdown-list {
     left: 0;
     background: linear-gradient(to bottom right, rgb(110, 72, 170), rgb(157, 80, 187));
   }
 
-  .wrapper-navbar .navlink li:not(.dropdown-list li) {
+  .wrapper-navbar .side-navlink li:not(.dropdown-list li) {
     width: 100%;
     padding: 1.5em;
     display: flex;
@@ -448,25 +454,268 @@ footer .social-media i {
   /* copyright */
   .copyright {
     padding: 1em 1.5em;
-    display: flex;
-    justify-content: center;
+    text-align: center;
   }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  h2 {
+    font-size: 1.17rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+  a {
+    font-size: 1rem;
+  }
+
+  button {
+    font-size: 1rem;
+  }
+
+  /* wrapper nabar */
+  .wrapper-navbar {
+    padding: 0 1.5em;
+  }
+
+  .wrapper-navbar .navlink {
+    display: none;
+  }
+
+  .wrapper-navbar .side-navlink {
+    width: 100%;
+    flex-direction: column;
+    position: absolute;
+    top: 65px;
+    left: -100%;
+    z-index: -1;
+    opacity: 0;
+    display: block;
+    background: var(--gradient-color);
+    transition: var(--timing);
+  }
+
+  .wrapper-navbar .show-navlink {
+    left: 0;
+    opacity: 1;
+  }
+
+  .wrapper-navbar .side-navlink .dropdown-list {
+    left: 0;
+    background: linear-gradient(to bottom right, rgb(110, 72, 170), rgb(157, 80, 187));
+  }
+
+  .wrapper-navbar .side-navlink li:not(.dropdown-list li) {
+    width: 100%;
+    padding: 1.5em;
+    display: flex;
+    align-items: center;
+  }
+
+  .wrapper-navbar .toggle-menu {
+    display: block;
+    cursor: pointer;
+    transition: var(--timing);
+  }
+
+  .wrapper-navbar .toggle-menu:hover {
+    opacity: 0.7;
+  }
+
+  /* jumbotron */
+  .jumbotron .jumbotron-text {
+    text-align: center;
+  }
+
+  .jumbotron .jumbotron-text h1 {
+    padding: 0 1.5em;
+  }
+
+  /* container */
+  .container {
+    padding: 0 1.5em;
+  }
+
+  .container section figure {
+    flex-direction: column;
+  }
+
+  .container section figure img {
+    width: 100%;
+    height: 200px;
+  }
+
+  .container section figure figcaption {
+    width: 100%;
+    margin-top: 1em;
+  }
+
+  .container section:nth-child(even) figure img {
+    order: 1;
+  }
+
+  .container section:nth-child(even) figure figcaption {
+    order: 2;
+  }
+
+  /* footer */
+  footer {
+    padding: 0 1.5em;
+    flex-direction: column;
+  }
+
+  footer .documentation,
+  footer .social-media {
+    margin-top: 2em;
+  }
+
+  /* copyright */
+  .copyright {
+    padding: 1em 0;
+    text-align: center;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 1.75rem;
+  }
+
+  h2 {
+    font-size: 1.25rem;
+  }
+
+  /* wrapper nabar */
+  .wrapper-navbar {
+    padding: 0 3em;
+  }
+
+  .wrapper-navbar .navlink {
+    width: 50%;
+    display: flex;
+  }
+
+  .wrapper-navbar .side-navlink {
+    display: none;
+  }
+
+  .wrapper-navbar .toggle-menu {
+    display: none;
+  }
+
+  /* container */
+  .container {
+    padding: 0 3em;
+  }
+
+  .container section figure {
+    flex-direction: row;
+  }
+
+  .container section figure img {
+    width: 48%;
+    height: 350px;
+  }
+
+  .container section figure figcaption {
+    width: 48%;
+    margin-top: 0;
+  }
+
+  .container section:nth-child(even) figure img {
+    order: 2;
+  }
+
+  .container section:nth-child(even) figure figcaption {
+    order: 1;
+  }
+
+  /* footer */
+  footer {
+    padding: 0 3em;
+    flex-direction: row;
+  }
+
+  footer .documentation,
+  footer .social-media {
+    margin-top: 0;
+  }
+
+  /* copyright */
+  .copyright {
+    padding: 1em 3em;
+    text-align: start;
+  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  /* wrapper nabar */
+  .wrapper-navbar {
+    padding: 0 4em;
+  }
+
+  .wrapper-navbar .navlink {
+    width: 40%;
+  }
+
+  /* container */
+  .container {
+    padding: 0 4em;
+  }
+
+  /* footer */
+  footer {
+    padding: 0 4em;
+  }
+
+  /* copyright */
+  .copyright {
+    padding: 1em 4em;
+  }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+  /* wrapper nabar */
+  .wrapper-navbar {
+    padding: 0 5em;
+  }
+
+  .wrapper-navbar .navlink {
+    width: 30%;
+  }
+
+  /* container */
+  .container {
+    padding: 0 5em;
+  }
+
+  /* footer */
+  footer {
+    padding: 0 5em;
+  }
+
+  /* copyright */
+  .copyright {
+    padding: 1em 5em;
+  }
 }
 
 /* Medium devices (landscape tablets, 550px and up) */
@@ -497,42 +746,16 @@ footer .social-media i {
   }
 
   .wrapper-navbar .navlink {
-    width: 100%;
-    flex-direction: column;
-    position: absolute;
-    top: 50px;
-    left: -100%;
-    z-index: -1;
-    opacity: 0;
-    background: var(--gradient-color);
-    transition: var(--timing);
-  }
-
-  .wrapper-navbar .show-navlink {
-    left: 0;
-    opacity: 1;
-  }
-
-  .wrapper-navbar .navlink li:not(.dropdown-list li) {
-    width: 100%;
-    padding: 1.5em;
+    width: 50%;
     display: flex;
-    align-items: center;
   }
 
-  .wrapper-navbar .navlink .dropdown:hover .dropdown-list {
-    display: block;
-    top: -130px;
+  .wrapper-navbar .side-navlink {
+    display: none;
   }
 
   .wrapper-navbar .toggle-menu {
-    display: block;
-    cursor: pointer;
-    transition: var(--timing);
-  }
-
-  .wrapper-navbar .toggle-menu:hover {
-    opacity: 0.7;
+    display: none;
   }
 
   /* jumbotron */
@@ -549,9 +772,26 @@ footer .social-media i {
     padding: 0 1.5em;
   }
 
+  .container section figure {
+    flex-direction: row;
+  }
+
   .container section figure img {
-    object-fit: fill;
-    aspect-ratio: 1/1;
+    width: 48%;
+    height: 350px;
+  }
+
+  .container section figure figcaption {
+    width: 48%;
+    margin-top: 1em;
+  }
+
+  .container section:nth-child(even) figure img {
+    order: 2;
+  }
+
+  .container section:nth-child(even) figure figcaption {
+    order: 1;
   }
 
   /* footer */
@@ -567,8 +807,6 @@ footer .social-media i {
 
   /* copyright */
   .copyright {
-    padding: 1em 1.5em;
-    display: flex;
-    justify-content: center;
+    padding: 1em 0;
   }
 }
